--- a/api/package.json
+++ b/api/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@redwoodjs/api": "4.1.1",
+    "@redwoodjs/auth-dbauth-api": "4.1.1",
     "@redwoodjs/graphql-server": "4.1.1"
   }
 }
