--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     ]
   },
   "devDependencies": {
-    "@redwoodjs/core": "4.1.1"
+    "@redwoodjs/auth-dbauth-setup": "4.1.1",
+    "@redwoodjs/core": "4.1.1",
+    "prettier-plugin-tailwindcss": "^0.2.3"
   },
   "eslintConfig": {
     "extends": "@redwoodjs/eslint-config",
